@@ -90,6 +90,8 @@
   <property name="tomcat.jdbc.dir"       value="${basedir}/modules/jdbc-pool"/>
   <!-- build output directory for jdbc-pool -->
   <property name="tomcat.pool"           value="${tomcat.output}/jdbc-pool"/>
+  <!-- build output directory for generated reflectionless code -->
+  <property name="tomcat.xreflect"       value="${tomcat.output}/xreflect"/>
 
   <!-- Servlet 4.0 spec requires Java 8+ -->
   <property name="compile.source" value="8"/>
@@ -218,13 +220,20 @@
              property="java9.test.option.3"
              value="--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED"/>
   <property name="java9.test.option.3" value="-Dtest.3=3"/>
+  <available classname="java.lang.reflect.InaccessibleObjectException"
+             property="java9.test.option.4"
+             value="--add-opens=java.base/java.util=ALL-UNNAMED"/>
+  <property name="java9.test.option.4" value="-Dtest.4=4"/>
+  <available classname="java.lang.reflect.InaccessibleObjectException"
+             property="java9.test.option.5"
+             value="--add-opens=java.base/java.util.concurrent=ALL-UNNAMED"/>
+  <property name="java9.test.option.5" value="-Dtest.5=5"/>
 
   <!-- Classpaths -->
   <path id="compile.classpath">
     <pathelement location="${bnd.jar}"/>
     <pathelement location="${osgi-annotations.jar}"/>
     <pathelement location="${jdt.jar}"/>
-    <pathelement location="${saaj-api.jar}"/>
     <pathelement location="${jaxrpc-lib.jar}"/>
     <pathelement location="${wsdl4j-lib.jar}"/>
   </path>
@@ -1730,7 +1739,7 @@
            license="${tomcat.manifests}/servlet-api.jar.license"/>
 
     <!-- Leave generated code in an easy place for review -->
-    <copy todir="${java.io.tmpdir}"
+    <copy todir="${tomcat.xreflect}"
           file="${xreflect.directory}/sources/org/apache/tomcat/util/XReflectionIntrospectionUtils.java"
           overwrite="true"/>
     <!-- Delete our temporary compilation directory -->
@@ -1933,6 +1942,8 @@
         <jvmarg value="${java9.test.option.1}"/>
         <jvmarg value="${java9.test.option.2}"/>
         <jvmarg value="${java9.test.option.3}"/>
+        <jvmarg value="${java9.test.option.4}"/>
+        <jvmarg value="${java9.test.option.5}"/>
 
         <classpath refid="tomcat.test.run.classpath" />
 
@@ -2553,20 +2564,16 @@ skip.installer property in build.properties" />
   <target name="-installer-sign-uninstaller"
       unless="skip.installer" depends="-installer-create-uninstaller"
       if="${do.codesigning}">
-    <taskdef name="signcode"
-        classname="org.apache.tomcat.buildutil.SignCode"
-        classpath="${tomcat.classes}" />
-    <signcode userName="${codesigning.user}" password="${codesigning.pwd}"
-        partnerCode="${codesigning.partnercode}"
-        keyStore="${codesigning.keyStore}"
-        keyStorePassword="${codesigning.keyStorePassword}"
-        applicationName="Apache Tomcat ${version.major.minor} Uninstaller"
-        applicationversion="${version}"
-        signingService="${codesigning.service}">
-      <fileset dir="${tomcat.dist}">
-        <filename name="Uninstall.exe"/>
-      </fileset>
-    </signcode>
+    <exec executable="${codesigning.exec}" failonerror="true">
+      <arg value="sign"/>
+      <arg value="/sha1"/>
+      <arg value="${codesigning.certificate.thumbprint}"/>
+      <arg value="/fd"/>
+      <arg value="sha512"/>
+      <arg value="/tr"/>
+      <arg value="http://timestamp.digicert.com"/>
+      <arg value="${tomcat.dist}/Uninstall.exe"/>
+    </exec>
   </target>
 
   <target name="-installer" unless="skip.installer"
@@ -2589,20 +2596,16 @@ skip.installer property in build.properties" />
   <target name="installer-sign"
       description="Builds and optionally signs the Windows installer"
       depends="-installer" if="${do.codesigning}" >
-    <taskdef name="signcode"
-        classname="org.apache.tomcat.buildutil.SignCode"
-        classpath="${tomcat.classes}" />
-    <signcode userName="${codesigning.user}" password="${codesigning.pwd}"
-              partnerCode="${codesigning.partnercode}"
-              keyStore="${codesigning.keyStore}"
-              keyStorePassword="${codesigning.keyStorePassword}"
-              applicationName="Apache Tomcat ${version.major.minor}"
-              applicationversion="${version}"
-              signingService="${codesigning.service}">
-      <fileset dir="${tomcat.release}">
-        <filename name="v${version}/bin/${final.name}.exe"/>
-      </fileset>
-    </signcode>
+    <exec executable="${codesigning.exec}" failonerror="true">
+      <arg value="sign"/>
+      <arg value="/sha1"/>
+      <arg value="${codesigning.certificate.thumbprint}"/>
+      <arg value="/fd"/>
+      <arg value="sha512"/>
+      <arg value="/tr"/>
+      <arg value="http://timestamp.digicert.com"/>
+      <arg value="${tomcat.release}/v${version}/bin/${final.name}.exe"/>
+    </exec>
     <!-- .exe has changed so need to redo checksums and OpenPGP signature -->
     <delete file="${tomcat.release}/v${version}/bin/${final.name}.exe.asc" />
     <delete file="${tomcat.release}/v${version}/bin/${final.name}.exe.sha512" />
@@ -3093,17 +3096,6 @@ skip.installer property in build.properties" />
       <param name="checksum.algorithm" value="${jdt.checksum.algorithm}"/>
       <param name="checksum.value" value="${jdt.checksum.value}"/>
     </antcall>
-
-    <!-- Download SAAJ API -->
-    <antcall target="downloadfile">
-      <param name="sourcefile" value="${saaj-api.loc}"/>
-      <param name="destfile" value="${saaj-api.jar}"/>
-      <param name="destdir" value="${saaj-api.home}"/>
-      <param name="checksum.enabled" value="${saaj-api.checksum.enabled}"/>
-      <param name="checksum.algorithm" value="${saaj-api.checksum.algorithm}"/>
-      <param name="checksum.value" value="${saaj-api.checksum.value}"/>
-    </antcall>
-
 
     <!-- Download WS API -->
     <antcall target="downloadfile">
